[gd_scene load_steps=14 format=3 uid="uid://curwbo2aommjw"]

[ext_resource type="Script" uid="uid://08s1mj86nylu" path="res://Scripts/bodypart.gd" id="1_gwa80"]
[ext_resource type="Script" uid="uid://b04jmuvaj75kf" path="res://Scripts/enemy_bat.gd" id="1_puk8l"]
[ext_resource type="PackedScene" uid="uid://ctk8y3gtl1yj7" path="res://Scenes/bullets/explosion.tscn" id="3_41w0q"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8fo5n"]
albedo_color = Color(0.635294, 0, 0.333333, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2ddx6"]
material = SubResource("StandardMaterial3D_8fo5n")
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dkxux"]
albedo_color = Color(0.298039, 0, 0.301961, 1)

[sub_resource type="BoxMesh" id="BoxMesh_cquyb"]
material = SubResource("StandardMaterial3D_dkxux")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n14a8"]
albedo_color = Color(0.117647, 0.117647, 0.117647, 1)

[sub_resource type="BoxMesh" id="BoxMesh_8shha"]
material = SubResource("StandardMaterial3D_n14a8")

[sub_resource type="SphereShape3D" id="SphereShape3D_ayy1y"]

[sub_resource type="SphereShape3D" id="SphereShape3D_hxnwd"]
radius = 0.590031

[sub_resource type="SphereShape3D" id="SphereShape3D_7jh7b"]

[sub_resource type="SphereShape3D" id="SphereShape3D_kcsy7"]

[node name="enemy_bat" type="CharacterBody3D"]
motion_mode = 1
script = ExtResource("1_puk8l")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_2ddx6")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(0.503554, 0, 0, 0, 0.470245, 0, 0, 0, 0.683468, 0, 0, 0.282623)
mesh = SubResource("BoxMesh_cquyb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1.9369, 0, 0, 0, 0.623632, 0, 0, 0, 0.323068, 0, 0, 0)
mesh = SubResource("BoxMesh_8shha")

[node name="attention_area" type="Area3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/attention_area"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0)
shape = SubResource("SphereShape3D_ayy1y")

[node name="bone_head" type="PhysicalBone3D" parent="MeshInstance3D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_gwa80")

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/bone_head"]
shape = SubResource("SphereShape3D_hxnwd")

[node name="view_line" type="RayCast3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-07, 1, 0, -10, -4.37114e-08, 0, 0, 0)
collision_mask = 7

[node name="explosion_area" type="Area3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/explosion_area"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
shape = SubResource("SphereShape3D_7jh7b")

[node name="aim_helper" type="Node3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_kcsy7")

[node name="timer_wait_until_charge" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="explosion" parent="." instance=ExtResource("3_41w0q")]

[connection signal="body_entered" from="MeshInstance3D/attention_area" to="." method="_on_attention_area_body_entered"]
[connection signal="body_exited" from="MeshInstance3D/attention_area" to="." method="_on_attention_area_body_exited"]
[connection signal="bodypart_hit" from="MeshInstance3D/bone_head" to="." method="_on_bone_head_bodypart_hit"]
[connection signal="body_entered" from="MeshInstance3D/explosion_area" to="." method="_on_explosion_area_body_entered"]
[connection signal="body_exited" from="MeshInstance3D/explosion_area" to="." method="_on_explosion_area_body_exited"]
[connection signal="timeout" from="timer_wait_until_charge" to="." method="_on_timer_wait_until_charge_timeout"]
